--- a/_publications/2022-eva.html
+++ b/_publications/2022-eva.html
@@ -20,6 +20,7 @@ tags:
   - Video Analytics
   - Databases
 pdf: https://dl.acm.org/doi/abs/10.1145/3514221.3526142
+recording:
 ---
 
 Advances in deep learning have led to a resurgence of interest in video analytics. In an exploratory video analytics pipeline, a data scientist often starts by searching for a global trend and then iteratively refines the query until they identify the desired local trend. These queries tend to have overlapping computation and often differ in their predicates. However, these predicates are computationally expensive to evaluate since they contain user-defined functions (UDFs) that wrap around deep learning models.
