--- a/publications.html
+++ b/publications.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Publications
-subtitle: We publish at Visualization, Machine Learning, and Data Science conferences.
-description: Recent publications from the Data Interaction Group at Visualization, Machine Learning, and Data Science conferences.
+subtitle: We publish at Data Systems and Machine Learning venues.
+description: Recent publications from the Data Systems and Analytics Group.
 ---
 
 <div id="facets" class="dn flex flex-row flex-wrap">
