--- a/team.html
+++ b/team.html
@@ -23,18 +23,21 @@ roles:
           <div class="w-25-m w-20-l w-50 ph2 pv2">
             {% if person.website %}<a href="{{ person.website }}">{% endif %}
               <span{% if person.content %} title="Fun fact: {{ person.content }}"{% endif %}>
-                <img src="{{ person.image | relative_url }}" alt="Picture of {{ person.name }}" loading="lazy" class="br3" />
+                  <img src="{{ person.image | relative_url }}" alt="Picture of {{ person.name }}" loading="lazy" class="br3" style="width: 400px; height: 200px;" />
                 <span class="black">
                   {{ person.name }}
                 </span>
               </span>
               {% if person.website %}</a>{% endif %}
               <div class="gray">({{ person.role }})</div>
-              <!-- loop through advisors -->
-              Advised by:
-              {% for advisor in person.advisors %}
-                <div class="black"> - {{ advisor }}</div>
-              {% endfor %}
+              {% if person.advisors %}
+              <!-- check if advisors exist -->
+                Advised by:
+                <!-- loop through advisors -->
+                {% for advisor in person.advisors %}
+                  <div class="black"> - {{ advisor }}</div>
+                {% endfor %}
+              {% endif %}
             </div>
         {% endunless %}
       {% endif %}
