--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@ roles:
           <div class="w-25-m w-20-l w-50 ph2 pv2">
             {% if person.website %}<a href="{{ person.website }}">{% endif %}
               <span{% if person.content %} title="Fun fact: {{ person.content }}"{% endif %}>
-                  <img src="{{ person.image | relative_url }}" alt="Picture of {{ person.name }}" loading="lazy" class="br3" style="width: 400px; height: 200px;" />
+                  <img src="{{ person.image | relative_url }}" alt="Picture of {{ person.name }}" loading="lazy" class="br3" />
                 <span class="black">
                   {{ person.name }}
                 </span>
