cleaned up files by removing backslash in pub title

--- a/_publications/2006-conf-dsom-JungSPPS06.html
+++ b/_publications/2006-conf-dsom-JungSPPS06.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2006
-title: "Detecting Bottleneck in \emphn-Tier IT Applications Through Analysis"
+title: "Detecting Bottleneck in emphn-Tier IT Applications Through Analysis"
 authors:
   - Gueyoung Jung
   - Galen S. Swint
