--- a/_publications/2012-conf-colcom-FanLLS12.html
+++ b/_publications/2012-conf-colcom-FanLLS12.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2012
-title: "EigenTrustp\(\mbox++\): Attack resilient trust management"
+title: "EigenTrustp(mbox++): Attack resilient trust management"
 authors:
   - Xinxin Fan
   - Ling Liu
