--- a/_publications/2015-conf-sigmod-ArulrajPD15.html
+++ b/_publications/2015-conf-sigmod-ArulrajPD15.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2015
-title: "Let's Talk About Storage \& Recovery Methods for Non-Volatile Memory Database Systems"
+title: "Let's Talk About Storage & Recovery Methods for Non-Volatile Memory Database Systems"
 authors:
   - Joy Arulraj
   - Andrew Pavlo
