--- a/_publications/2018-journals-tsc-ZhangYPA18.html
+++ b/_publications/2018-journals-tsc-ZhangYPA18.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2018
-title: "Editorial Preface: Special Issue on Mobile \& Cloud Computing Services"
+title: "Editorial Preface: Special Issue on Mobile & Cloud Computing Services"
 authors:
   - Jia Zhang
   - Stephen S. Yau
