--- a/_publications/2023-journals-pvldb-KakkarRKRC0A23.html
+++ b/_publications/2023-journals-pvldb-KakkarRKRC0A23.html
@@ -17,3 +17,22 @@ type:
   - Journal
 pdf: https://www.vldb.org/pvldb/vol16/p4082-kakkar.pdf
 ---
+---
+layout: publication
+year: 2023
+title: "Interactive Demonstration of EVA"
+authors:
+  - Gaurav Tarlok Kakkar
+  - Aryan Rajoria
+  - Myna Prasanna Kalluraya
+  - Ashmita Raju
+  - Jiashen Cao
+  - Kexin Rong
+  - Joy Arulraj
+venue_tags:
+  - PVLDB
+venue: PVLDB
+type:
+  - Journal
+pdf: https://www.vldb.org/pvldb/vol16/p4082-kakkar.pdf
+---
