--- a/_publications/2013-conf-asunam-TamersoyXLRCN13.html
+++ b/_publications/2013-conf-asunam-TamersoyXLRCN13.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2013
-title: "Inside insider trading: patterns \& discoveries from a large scale exploratory analysis"
+title: "Inside insider trading: patterns & discoveries from a large scale exploratory analysis"
 authors:
   - Acar Tamersoy
   - Bo Xie
