--- a/_publications/2017-conf-uic-FerreiraVOP17.html
+++ b/_publications/2017-conf-uic-FerreiraVOP17.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2017
-title: "Smart services: A case study on smarter public safety by a mobile app for University of S\ao Paulo"
+title: "Smart services: A case study on smarter public safety by a mobile app for University of Sao Paulo"
 authors:
   - Jo{\~{a}}o Eduardo Ferreira
   - Jose Antonio Visintin
