--- a/_publications/2019-journals-jsjkx-ZhangLW19.html
+++ b/_publications/2019-journals-jsjkx-ZhangLW19.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 year: 2019
-title: "\unicode19968\unicode31181\unicode22522\unicode20110\unicode39046\unicode22495\unicode20449\unicode20219\unicode21450\unicode19981\unicode20449\unicode20219\unicode30340\unicode22855\unicode24322\unicode20540\unicode20998\unicode35299\unicode25512\unicode33616\unicode31639\unicode27861 (Recommendation Algorithm with Field Trust and Distrust Based on SVD)"
+title: "unicode19968unicode31181unicode22522unicode20110unicode39046unicode22495unicode20449unicode20219unicode21450unicode19981unicode20449unicode20219unicode30340unicode22855unicode24322unicode20540unicode20998unicode35299unicode25512unicode33616unicode31639unicode27861 (Recommendation Algorithm with Field Trust and Distrust Based on SVD)"
 authors:
   - Qi Zhang
   - Ling Liu
