--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@ layout: default
 
 <div class="jumbotron">
   <div class="w-100 mw8 ph4-l ph3 pv5-l pv3 center">
-    <h1 class="f1 measure mt3">CMU Data Interaction Group</h1>
+    <h1 class="f1 measure mt3">GT Data Systems and Analytics Group</h1>
     <p class="f4 measure lh-copy">
       We are a research group at the
-      <a href="https://www.hcii.cmu.edu/"
-        >Human-Computer Interaction Institute</a
+      <a href="https://www.scs.gatech.edu/"
+        >School of Computer Science</a
       >
-      at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. Our
-      mission is to empower everyone to analyze and communicate data with
-      interactive systems.
+      at <a href="https://www.gatech.edu/">Georgia Tech</a>. We are interested in building systems and tools to help democratize data science and machine learning.
     </p>
     <h3>
       <a class="cta" href="{{ '/about' | relative_url }}"
@@ -28,11 +26,10 @@ layout: default
 
     <p class="f4 measure-wide lh-copy">
       Our group conducts research in computer science at the intersection of
-      human-computer interaction, machine learning, data science, programming
-      languages, and data management.
+      data management, machine learning, and data science.
     </p>
 
-    <div class="flex flex-row-ns flex-wrap pt3">
+    <!-- <div class="flex flex-row-ns flex-wrap pt3">
       <div class="mr2-ns mv2 w-20-l w-40-m flex-auto shadow-4 pa3 br2">
         <h3 class="f4 mt0">Visualization</h3>
         <p class="measure lh-copy">
@@ -68,8 +65,8 @@ layout: default
           the models, the designers who create the experiences, and the people
           who use the products.
         </p>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
   </section>
 
   <div class="flex flex-row-ns flex-column pv3">
@@ -90,7 +87,7 @@ layout: default
       <a class="cta" href="/news">Show all</a>
     </section>
 
-    <section class="pl3-ns w-third-l w-50-m">
+    <!-- <section class="pl3-ns w-third-l w-50-m">
       <h2 class="f3">Courses</h2>
 
       <ul class="list pl0">
@@ -106,10 +103,10 @@ layout: default
         </li>
         {% endfor %} {% endfor %}
       </ul>
-    </section>
+    </section> -->
   </div>
 
-  <div class="mv3 measure-wide">
+  <!-- <div class="mv3 measure-wide">
     <h2 class="f3 mt0">Participate</h2>
     <p class="lh-copy">
       Interested in sharing your expertise with us? Check out our ongoing
@@ -117,7 +114,7 @@ layout: default
       practitioners!
     </p>
     <a class="link dim dib cta" href="/studies"> Learn More </a>
-  </div>
+  </div> -->
 
   <section class="pv3">
     <h2 class="f3">Recent Publications</h2>
