fix thumbnail and teaser image

--- a/_publications/2022-conf-sigmod-XuKAR22.html
+++ b/_publications/2022-conf-sigmod-XuKAR22.html
@@ -13,4 +13,6 @@ venue: SIGMOD
 type:
   - Conference
 pdf: https://doi.org/10.1145/3514221.3526142
+teaser_image: assets/publications/2022-eva.png
+thumbnail_image: assets/publications/2022-eva_thumb.png
 ---
