--- a/publications.html
+++ b/publications.html
@@ -46,10 +46,13 @@ description: Recent publications from the Data Systems and Analytics Group.
   {% capture anchor %}{% if pub.id %}{{ pub.id }}{% else %}{{ pub.title | slugify }}{% endif %}{% endcapture %}
 
   <div class="publication flex mt4" data-pub='{{ pub | jsonify | escape }}'>
-    {% assign thumb = 'assets' | append: pub.url | replace: '.html',
-      '_thumb.png' %}
-    <div class="h3 mr4 flex-shrink-0 preview-image ba b--black-05 dn db-ns "
-      style="background-image: url('{{ thumb | relative_url }}')"></div>
+
+    {% if pub.thumbnail_image %}
+      <div class="h3 mr4 flex-shrink-0 preview-image dn db-ns "
+        style="background-image: url('{{ pub.thumbnail_image | relative_url }}')"></div>
+    {% else %}
+      <div class="h3 mr4 flex-shrink-0 preview-image dn db-ns "></div>    
+    {% endif %}
     <div>
       <h3 class="mt0 f4 measure-wide lh-title mb2" id="{{ anchor }}">{% for award in pub.awards %}<i
           class="fas fa-{% if award == "Best Paper Award" %}trophy gold{% else %}award cmu-red{% endif %}"
