--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ layout: default
     <!-- </div> -->
   </section>
 
-  <div class="flex flex-row-ns flex-column pv3">
-    <section class="pr3 w-two-thirds-l w-50-m">
+  <!-- <div class="flex flex-row-ns flex-column pv3"> -->
+    <!-- <section class="pr3 w-two-thirds-l w-50-m">
       <h2 class="f3">News</h2>
 
       <ul class="list pl0">
@@ -85,7 +85,7 @@ layout: default
         {% endfor %}
       </ul>
       <a class="cta" href="/news">Show all</a>
-    </section>
+    </section> -->
 
     <!-- <section class="pl3-ns w-third-l w-50-m">
       <h2 class="f3">Courses</h2>
@@ -104,7 +104,7 @@ layout: default
         {% endfor %} {% endfor %}
       </ul>
     </section> -->
-  </div>
+  <!-- </div> -->
 
   <!-- <div class="mv3 measure-wide">
     <h2 class="f3 mt0">Participate</h2>
