index page name update

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 
 <div class="jumbotron">
   <div class="w-100 mw8 ph4-l ph3 pv5-l pv3 center">
-    <h1 class="f1 measure mt3">GT Data Systems and Analytics Group</h1>
+    <h1 class="f1 measure mt3">Data Systems and Analytics Group</h1>
     <p class="f4 measure lh-copy">
-      We are a research group at the
+      Data Systems and Analytics (DSA) is a research group at the
       <a href="https://www.scs.gatech.edu/"
         >School of Computer Science</a
       >
