--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
     <p class="f4 measure lh-copy">
       Data Systems and Analytics (DSA) is a research group at the
       <a href="https://www.scs.gatech.edu/"
-        >School of Computer Science</a
+        ><strong><em>School of Computer Science</em></strong></a
       >
-      at <a href="https://www.gatech.edu/">Georgia Tech</a>. We are interested in building systems and tools to help democratize data science and machine learning.
+      at <a href="https://www.gatech.edu/"><strong><em>Georgia Tech</em></strong></a>. We are interested in building systems and tools to help democratize data science and machine learning.
     </p>
     <h3>
       <a class="cta" href="{{ '/about' | relative_url }}"
@@ -25,7 +25,7 @@ layout: default
     <h2 class="f2">Research Areas</h2>
 
     <p class="f4 measure-wide lh-copy">
-      Our group conducts research in computer science at the intersection of
+      DSA group conducts research in computer science at the intersection of
       data management, machine learning, and data science.
     </p>
 
