added steve's pubs + fixed some other old ones

--- a/_publications/2013-conf-asplos-ArulrajCJL13.html
+++ b/_publications/2013-conf-asplos-ArulrajCJL13.html
@@ -4,7 +4,7 @@ year: 2013
 title: "Production-run software failure diagnosis via hardware performance counters"
 authors:
   - Joy Arulraj
-  - Po{-}Chun Chang
+  - Po-Chun Chang
   - Guoliang Jin
   - Shan Lu
 venue_tags:
