--- a/_publications/2018-journals-pvldb-ArulrajLML18.html
+++ b/_publications/2018-journals-pvldb-ArulrajLML18.html
@@ -6,7 +6,7 @@ authors:
   - Joy Arulraj
   - Justin J. Levandoski
   - Umar Farooq Minhas
-  - Per{-}{\AA}ke Larson
+  - Per-Ake Larson
 venue_tags:
   - PVLDB
 venue: PVLDB
