--- a/_publications/2020-journals-pvldb-SupremAPF20.html
+++ b/_publications/2020-journals-pvldb-SupremAPF20.html
@@ -6,7 +6,7 @@ authors:
   - Abhijit Suprem
   - Joy Arulraj
   - Calton Pu
-  - Jo{\~{a}}o Eduardo Ferreira
+  - Joao Eduardo Ferreira
 venue_tags:
   - PVLDB
 venue: PVLDB
