remove the bee emoji

--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Team
-subtitle: If you are a current student at Georgia Tech, you can apply to the lab via <a href="/">this form (TODO)</a>. If you are interested in a PhD with us, <a href="https://www.cc.gatech.edu/degree-programs/phd-computer-science">please apply to GT 🐝</a>.
+subtitle: If you are a current student at Georgia Tech, you can apply to the lab via <a href="/">this form (TODO)</a>. If you are interested in a PhD with us, <a href="https://www.cc.gatech.edu/degree-programs/phd-computer-science">please apply to GT</a>.
 roles:
   - Professor
   - PhD Student
