--- a/team.html
+++ b/team.html
@@ -35,7 +35,8 @@ roles:
         {% unless person.alumni_since %}
           <div class="w-25-m w-20-l w-50 ph2 pv2">
             {% if person.website %}<a href="{{ person.website }}">{% endif %}
-              <span{% if person.content %} title="Fun fact: {{ person.content }}"{% endif %}>
+              {% assign stripped_person_content = person.fun_fact | strip %}
+              <span{% if stripped_person_content != "" %} title="Fun fact: {{ stripped_person_content }}"{% endif %}>
                   <img src="{{ person.image | relative_url }}" alt="Picture of {{ person.name }}" loading="lazy" class="br3" />
                 <span class="black">
                   {{ person.name }}
