reduce index page pub limit to 3

--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@ description: Recent publications from the Data Systems and Analytics Group.
         {% endfor %}
       </div>
       {% if pub.venue %}
-      <div class="gt-dark-gray">
+      <div class="gt-blue-color">
         {% if pub.venue_url %}
         <a href="{{ pub.venue_url }}" class="gt-dark-gray">
           {% endif %}
